--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -43,4 +43,7 @@
               <ion-icon name="add-circle"></ion-icon>
             </ion-fab-button>
           </ion-fab>
+
+          <!--Testando!!!!!!!!!!!!-->
+          
 </ion-content>
