alteraçoes em categoria e incluindo o compsal.service

--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -39,7 +39,7 @@
     </ion-list>
     
         <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-            <ion-fab-button >
+            <ion-fab-button routerLink="/home">
               <ion-icon name="add-circle"></ion-icon>
             </ion-fab-button>
           </ion-fab>
