--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -8,42 +8,27 @@
   
 </ion-header>
 <ion-searchbar showCancelButton cancelButtonText="Custom Cancel" ></ion-searchbar>
-<ion-content>
+<ion-content padding>
+  <ion-list>
+      <ion-item>
+      <ion-label>Id </ion-label>
+      <ion-label>Descrição</ion-label>
+    </ion-item>
+    <ion-item *ngFor="let sumulas of lista_categorias">
+      <ion-label>{{sumulas.id}} </ion-label>
+      <ion-label>{{sumulas.nome}} </ion-label>
+      <ion-button slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
+       <ion-button slot="end" shape="round" fill="outline" color="danger">Deletar</ion-button>
+    </ion-item>
+  </ion-list>
 
-    <ion-list>
-      <ion-item >
-        Sub-7
-        <div class="item-note" slot="end">Atletas de 6 e 7 anos.</div>
-        <ion-button slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
-        <ion-button slot="end" shape="round" fill="outline" color="danger">Deletar</ion-button>
-      </ion-item>
-        <ion-item >
-        Sub-8
-        <div class="item-note" slot="end">Atletas de 8 anos.</div>
-        <ion-button slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
-        <ion-button slot="end" shape="round" fill="outline" color="danger">Deletar</ion-button>
-      </ion-item>
-        <ion-item >
-        Sub-9
-        <div class="item-note" slot="end">Atletas de 8 e 9 anos.</div>
-        <ion-button slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
-        <ion-button slot="end" shape="round" fill="outline" color="danger">Deletar</ion-button>
-      </ion-item>
-      <ion-item >Sub-11<div class="item-note" slot="end">Atletas de 10 e 11 anos.</div></ion-item>
-      <ion-item >Sub-13<div class="item-note" slot="end">Atletas de 12 e 13 anos.</div></ion-item>
-      <ion-item >Sub-15<div class="item-note" slot="end">Atletas de 14 e 15 anos.</div></ion-item>
-      <ion-item >Sub-17<div class="item-note" slot="end">Atletas de 16 e 17 anos.</div></ion-item>
-      <ion-item >Sub-20<div class="item-note" slot="end">Atletas de 18, 19 e 20 anos.</div></ion-item>
-      <ion-item >Adulto<div class="item-note" slot="end">Atletas de 20 anos em diante.</div></ion-item>
-      <ion-item >Veterano<div class="item-note" slot="end">Atletas a partir dos 35 anos.</div></ion-item>
-    </ion-list>
-    
-        <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-            <ion-fab-button routerLink="/home">
+      
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+            <ion-fab-button routerLink="/cadastrar-arbitro">
               <ion-icon name="add-circle"></ion-icon>
             </ion-fab-button>
           </ion-fab>
 
-          <!--Testando!!!!!!!!!!!!-->
+          
           
 </ion-content>
