--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -9,18 +9,20 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-searchbar animated [(ngModel)]="sumulas.nome" (ioniInput)="filtrarItens()" showCancelButton cancelButtonText="Custom Cancel"></ion-searchbar>
+
   <ion-list>
     <ion-item>
       <ion-label>Id </ion-label>
       <ion-label>Nome</ion-label>
       <ion-label></ion-label>
     </ion-item>
-    <ion-item *ngFor="let sumulas of lista_categorias">
+    <ion-item *ngFor="let sumulas of lista_categorias; let i = index">
       <ion-label>{{sumulas.id}} </ion-label>
       <ion-label>{{sumulas.nome}} </ion-label>
+      <ion-button slot="end" shape="round" fill="outline">Detalhar</ion-button>
       <ion-button slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
-      <ion-button slot="end" shape="round" fill="outline" color="danger">Deletar</ion-button>
+      <ion-button (click)="excluirUsuario(sumulas.id, sumulas.nome)" slot="end" shape="round" fill="outline" color="danger">Deletar
+      </ion-button>
     </ion-item>
   </ion-list>
 
