--- a/src/app/usuarios/usuarios.page.html
+++ b/src/app/usuarios/usuarios.page.html
@@ -7,6 +7,57 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
+
+  <ion-list>
+    <ion-item>
+      <ion-grid>
+        <ion-row >
+          <ion-col size="1">
+            <div>
+              Id
+            </div>
+          </ion-col>
+          <ion-col size="3">
+            <div>
+              Nome
+            </div>
+          </ion-col>
+          <ion-col size="3">
+            <div>
+              Apelido
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item *ngFor="let sumulas of lista_categorias; let i = index">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="1">
+            <div>
+              {{sumulas.id}}
+            </div>
+          </ion-col>
+          <ion-col size="5">
+            <div>
+              {{sumulas.nome}}
+            </div>
+          </ion-col>
+          <ion-col size="3">
+            <div>
+              {{sumulas.apelido}}
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-button slot="end" shape="round" fill="outline">Detalhar</ion-button>
+      <ion-button slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
+      <ion-button (click)="excluirUsuario(sumulas.id, sumulas.nome)" slot="end" shape="round" fill="outline"
+        color="danger">Deletar
+      </ion-button>
+    </ion-item>
+  </ion-list>
+
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
     <ion-fab-button routerLink="/cadastrar-usuario">
       <ion-icon name="add-circle"></ion-icon>
