--- a/src/app/cadastrar-usuario/cadastrar-usuario.page.html
+++ b/src/app/cadastrar-usuario/cadastrar-usuario.page.html
@@ -11,17 +11,14 @@
 
 
 <ion-content>
-  <!--<ion-item>
-    <ion-label position="floating">ID:</ion-label>
-    <ion-input required type="number" clearInput [(ngModel)]="model.id"></ion-input>
-  </ion-item> -->
+ 
   <ion-item>
     <ion-label position="floating">Nome:</ion-label>
     <ion-input required clearInput [(ngModel)]="model.nome"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">CPF:</ion-label>
-    <ion-input type="number" clearInput [(ngModel)]="model.cpf"></ion-input>
+    <ion-input required type="number" clearInput [(ngModel)]="model.cpf"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Apelido:</ion-label>
@@ -42,36 +39,35 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating">Telefone:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.telefone"></ion-input>
+    <ion-input required type="number" clearInput [(ngModel)]="model.telefone"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">E-mail:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.email"></ion-input>
+    <ion-input required clearInput [(ngModel)]="model.email"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Endereço:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.endereco"></ion-input>
+    <ion-input required clearInput [(ngModel)]="model.endereco"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Nº:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.numeroEnd"></ion-input>
+    <ion-input required clearInput [(ngModel)]="model.numeroEnd"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">CEP:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.cep"></ion-input>
+    <ion-input required type="number" clearInput [(ngModel)]="model.cep"></ion-input>
   </ion-item>
-
-  <ion-item>
+ <ion-item>
     <ion-label position="floating">Bairro:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.bairro"></ion-input>
+    <ion-input required clearInput [(ngModel)]="model.bairro"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Município:</ion-label>
-    <ion-input clearInput [(ngModel)]="model.municipio"></ion-input>
+    <ion-input required clearInput [(ngModel)]="model.municipio"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">UF:</ion-label>
-    <ion-select clearInput [(ngModel)]="model.uf" [interfaceOptions]="customPopoverOptions" interface="popover">
+    <ion-select required clearInput [(ngModel)]="model.uf" [interfaceOptions]="customPopoverOptions" interface="popover">
       <ion-select-option value="AC">AC</ion-select-option>
       <ion-select-option value="AL">AL</ion-select-option>
       <ion-select-option value="AP">AP</ion-select-option>
