--- a/src/app/usuarios/usuarios.page.html
+++ b/src/app/usuarios/usuarios.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Usuários</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content padding  color="warning">
 
   <ion-list>
     <ion-item>
@@ -56,8 +56,25 @@
     </ion-item>
   </ion-list>
 
+  <!-- ***************************************************************** 
+  <ion-item-sliding *ngFor="let sumulas of lista_categorias; let i = index">
+      <ion-item-options side="start">
+        <ion-item-option >Favorite</ion-item-option>
+        <ion-item-option color="danger" >Share</ion-item-option>
+      </ion-item-options>
+  
+      <ion-item>
+        <ion-label> {{sumulas.nome}} </ion-label>
+      </ion-item>
+  
+      <ion-item-options side="end">
+        <ion-item-option >Unread</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  -->
+
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-    <ion-fab-button routerLink="/cadastrar-usuario">
+    <ion-fab-button routerLink="/cadastrarUsuario">
       <ion-icon name="add-circle"></ion-icon>
     </ion-fab-button>
   </ion-fab>
