--- a/src/app/cadastrar-usuario/cadastrar-usuario.page.html
+++ b/src/app/cadastrar-usuario/cadastrar-usuario.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar color="medium">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
       <ion-back-button></ion-back-button>
@@ -100,7 +100,7 @@
         <ion-select-option value="EX">Exterior</ion-select-option>
       </ion-select>
     </ion-item>
-    <!--on-button type="submit" (click)="criarUsuario()">Cadastrar</ion-button>-->
+    <!--on-button type="submit" (click)="criarUsuario()">Cadastrar</ion-button>           -->
   </form>
 </ion-content>
 <ion-toolbar>
