--- a/src/app/usuarios/alterar/alterar.page.html
+++ b/src/app/usuarios/alterar/alterar.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar color="danger">
+    <ion-toolbar color="medium">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
         <ion-back-button></ion-back-button>
