--- a/src/app/usuarios/detalhar/detalhar.page.html
+++ b/src/app/usuarios/detalhar/detalhar.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar color="danger">
+    <ion-toolbar color="medium">
       <ion-buttons slot="start">
         <ion-back-button></ion-back-button>
       </ion-buttons>
