--- a/src/app/usuarios/usuarios.page.html
+++ b/src/app/usuarios/usuarios.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar color="medium">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Usuários</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content padding  color="warning">
+<ion-content padding  color="light">
 
   <ion-list>
     <ion-item>
