--- a/src/app/times/alterar/alterar.page.html
+++ b/src/app/times/alterar/alterar.page.html
@@ -1,9 +1,26 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>alterar</ion-title>
+  <ion-toolbar color="medium">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Alterar Time</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content color="light">
+    <div class="autocomplete">
+        <ion-searchbar
+          [(ngModel)]="searchText"
+          (ionFocus)="addFocus()"
+          (ionInput)="search()"
+          (ionBlur)="removeFocus()"
+          debounce=500>
+        </ion-searchbar>
+        <ion-list>
+          <ion-item *ngFor="let res of refRicerca" (click)="addNote(res)">
+            {{res}}
+          </ion-item>
+        </ion-list>
+      </div>
 </ion-content>
