--- a/src/app/times/cadastrar/cadastrar.page.html
+++ b/src/app/times/cadastrar/cadastrar.page.html
@@ -1,9 +1,163 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>cadastrar</ion-title>
+  <ion-toolbar color="medium">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Cadastrar Time</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light">
+
+  <form [formGroup]="formTipo">
+
+    <ion-item>
+      <ion-label position="floating">Nome:</ion-label>
+      <ion-input formControlName="nome" maxLength="50" clearInput>
+      </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Sexo:</ion-label>
+      <ion-select clearInput formControlName="sexo" [interfaceOptions]="customPopoverOptions" interface="popover"
+        [disabled]="formTime.value.goleiro != null 
+        || formTime.value.fixo != null
+        || formTime.value.alaDireita != null
+        || formTime.value.alaEsquerda != null
+        || formTime.value.pivo != null" clearInput>
+        <ion-select-option value="M">Masculino</ion-select-option>
+        <ion-select-option value="F">Feminino</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </form>
+
+  <form [formGroup]="formTime">
+    <ion-item>
+      <ion-label position="floating">Goleiro</ion-label>
+
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" formControlName="goleiro" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" formControlName="goleiro" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" formControlName="goleiro" interface="action-sheet" clearInput
+        [disabled]=true>
+      </ion-select>
+
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Fixo</ion-label>
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" [compareWith]="compareWith" formControlName="fixo"
+        interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" [compareWith]="compareWith" formControlName="fixo"
+        interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" [compareWith]="compareWith" formControlName="fixo"
+        interface="action-sheet" clearInput [disabled]=true>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Ala Direita</ion-label>
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" formControlName="alaDireita" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" formControlName="alaDireita" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" formControlName="alaDireita" interface="action-sheet" clearInput
+        [disabled]=true>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Ala Esquerda</ion-label>
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" formControlName="alaEsquerda" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" formControlName="alaEsquerda" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" formControlName="alaEsquerda" interface="action-sheet" clearInput
+        [disabled]=true>
+      </ion-select>
+
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Pivo</ion-label>
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" formControlName="pivo" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" formControlName="pivo" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" formControlName="pivo" interface="action-sheet" clearInput
+        [disabled]=true>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Treinador</ion-label>
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" formControlName="treinador" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" formControlName="treinador" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" formControlName="treinador" interface="action-sheet" clearInput
+        [disabled]=true>
+      </ion-select>
+
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Massagista</ion-label>
+      <ion-select *ngIf="formTipo.value.sexo == 'F'" formControlName="massagista" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosF" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == 'M'" formControlName="massagista" interface="action-sheet" clearInput>
+        <ion-select-option *ngFor="let sumulas of lista_usuariosM" value={{sumulas.id}}>
+          {{sumulas.nome + ' ( ' + sumulas.cpf + ' / ' + sumulas.id +' )'}}
+        </ion-select-option>
+      </ion-select>
+      <ion-select *ngIf="formTipo.value.sexo == null" formControlName="massagista" interface="action-sheet" clearInput
+        [disabled]=true>
+      </ion-select>
+    </ion-item>
+  </form>
 
 </ion-content>
+<ion-toolbar>
+  <ion-button (click)="criarTime()" type="submit" expand="full" [disabled]="!formTime.valid || !formTipo.valid" fill="outline"
+    shape="round">Cadastrar
+  </ion-button>
+
+  <ion-item>{{formTime.value | json}}</ion-item>
+  <ion-item>{{formTipo.value | json}}</ion-item>
+</ion-toolbar>
