--- a/src/app/times/detalhar/detalhar.page.html
+++ b/src/app/times/detalhar/detalhar.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>detalhar</ion-title>
+  <ion-toolbar color="medium">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Detalhar Time</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light">
 
 </ion-content>
