--- a/src/app/times/times.page.html
+++ b/src/app/times/times.page.html
@@ -26,7 +26,7 @@
           </ion-col>
           <ion-col size="3">
             <div>
-              Apelido
+              Gênero
             </div>
           </ion-col>
         </ion-row>
@@ -47,7 +47,7 @@
           </ion-col>
           <ion-col size="3">
             <div>
-              {{sumulas.apelido}}
+              {{sumulas.genero}}
             </div>
           </ion-col>
         </ion-row>
